[gd_scene load_steps=11 format=3 uid="uid://daimuyqyagfuv"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_mhv73"]
[ext_resource type="Texture2D" uid="uid://dtc05tffo33d2" path="res://assets/Player ship/Player_ship (up).png" id="2_5v4ue"]
[ext_resource type="Texture2D" uid="uid://36qx44pv5di8" path="res://assets/Effects/Explosion1.png" id="3_f7oy4"]
[ext_resource type="Texture2D" uid="uid://ttvvshmstpvd" path="res://assets/Effects/Explosion2.png" id="4_566ed"]
[ext_resource type="Texture2D" uid="uid://c7o7dr0gdtdk8" path="res://assets/Effects/Explosion3.png" id="5_uacyj"]
[ext_resource type="Texture2D" uid="uid://bku4ar1njn7cc" path="res://assets/Effects/Explosion4.png" id="6_vps8j"]
[ext_resource type="Texture2D" uid="uid://nlnilnym8eq1" path="res://assets/Effects/Explosion5.png" id="7_6e0pj"]
[ext_resource type="Texture2D" uid="uid://c86q73aeeiihc" path="res://assets/Effects/Explosion6.png" id="7_vry63"]
[ext_resource type="AudioStream" uid="uid://dyhwiny18sxk2" path="res://assets/Effects/mixkit-fuel-explosion-1705.mp3" id="9_tnfxx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xnkit"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("3_f7oy4")
}, {
"duration": 1.0,
"texture": ExtResource("4_566ed")
}, {
"duration": 1.0,
"texture": ExtResource("5_uacyj")
}, {
"duration": 1.0,
"texture": ExtResource("6_vps8j")
}, {
"duration": 1.0,
"texture": ExtResource("7_6e0pj")
}, {
"duration": 1.0,
"texture": ExtResource("7_vry63")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(270, 777)
collision_mask = 10
motion_mode = 1
script = ExtResource("1_mhv73")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_5v4ue")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D"]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_xnkit")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-270, -780)
polygon = PackedVector2Array(230, 801, 230, 788, 237, 788, 244, 774, 255, 774, 255, 759, 259, 754, 264, 744, 275, 744, 280, 754, 285, 759, 285, 774, 296, 774, 302, 788, 310, 789, 310, 801, 296, 801, 293, 816, 277, 816, 275, 809, 265, 809, 262, 816, 245, 816, 243, 801)

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(23, -31)

[node name="Muzzle2" type="Marker2D" parent="."]
position = Vector2(-23, -31)

[node name="ExploadeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_tnfxx")
volume_db = -10.0

[connection signal="animation_finished" from="Sprite2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
